syntax = "proto3";

package facilities;

import "common.proto";

service UnitsService {
  rpc GetUnits(GetUnitsRequest) returns (GetUnitsResponse);
  rpc CreateUnit(CreateUnitRequest) returns (Unit);
  rpc UpdateUnit(UpdateUnitRequest) returns (Unit);
  rpc DeleteUnit(UpdateUnitRequest) returns (common.Empty);
}
message Unit {
  int32 id = 1;
  int32 establishment_id = 2;
  string name = 3;
  string type = 4;
  string surface_type = 5;
  bool indoor = 6;
  optional int32 capacity = 7;
  bool active = 8;
  string created_at = 9;
  string updated_at = 10;
}
message GetUnitsRequest {
  optional common.PaginationRequest pagination = 1;
}

message GetUnitsResponse {
  repeated Unit items = 1;
  int32 total = 2;
}

message CreateUnitRequest {
  int32 establishment_id = 2;
  string name = 3;
  string type = 4;
  optional string surface_type = 5;
  bool indoor = 6;
  optional int32 capacity = 7;
}

message UpdateUnitRequest {
  int32 id = 1;
  CreateUnitRequest model = 2;
}
